--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # Project dependencies
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
-.cache
+# .cache
 node_modules
 yarn-error.log
 
 # Build directory
-/public
+# /public
 
 .DS_Store
