--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
     "ncp": "^2.0.0",
     "react-helmet": "^5.2.0"
   },
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": ["gatsby"],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
-    "test": "echo \"Error: no test specified\""
+    "test": "echo \"Error: no test specified\"",
+    "postinstall": "zip -r9 all.zip * && zip -r9 pkg.zip all.zip build.js"
   },
   "devDependencies": {
     "prettier": "^1.11.1"
