add text editable

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # Project dependencies
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
-# .cache
+.cache
+.env
 node_modules
 yarn-error.log
 
 # Build directory
-# /public
+/public
+/fns
 
 .DS_Store
