--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-preact": "^1.0.17",
     "gatsby-plugin-react-helmet": "^2.0.7",
     "mysql2": "^1.5.3",
+    "netlify-identity-widget": "^1.4.11",
     "netlify-lambda": "^0.3.0",
     "react-helmet": "^5.2.0",
     "request": "^2.85.0",
