--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "deepmerge": "^2.1.0",
     "dotenv": "^5.0.1",
     "gatsby": "^1.9.232",
     "gatsby-cli": "^1.1.45",
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-preact": "^1.0.17",
     "gatsby-plugin-react-helmet": "^2.0.7",
+    "gatsby-source-filesystem": "^1.5.27",
+    "gatsby-transformer-json": "^1.0.16",
     "mysql2": "^1.5.3",
     "netlify-identity-widget": "^1.4.11",
     "netlify-lambda": "^0.3.0",
