--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-react-helmet": "^2.0.7",
     "gatsby-source-filesystem": "^1.5.27",
     "gatsby-transformer-json": "^1.0.16",
+    "immutable": "^3.8.2",
     "mysql2": "^1.5.3",
     "netlify-identity-widget": "^1.4.11",
     "netlify-lambda": "^0.3.0",
